--- a/main.css
+++ b/main.css
@@ -1,24 +1,9 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:400,700");
+/**
+ * --------------- Navbar ----------------
+ *
+ * @format
+ */
 
-:root {
-  --primaryColor: #f09d51;
-  --mainWhite: #fff;
-  --mainBlack: #222;
-  --mainGrey: #ececec;
-  --mainSpacing: 0.1rem;
-  --mainTransition: all 0.3s linear;
-}
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-body {
-  color: var(--mainBlack);
-  background: var(--mainWhite);
-  font-family: "Lato", sans-serif;
-}
-/* --------------- Navbar ---------------- */
 .navbar {
   position: sticky;
   top: 0;
