--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+a {
+  text-decoration: none;
+  color: inherit;
+}
 body {
   color: var(--mainBlack);
   background: var(--mainWhite);
